compiler/testData/diagnostics/tests/generics/tpAsReified/ClassDereference.kt

fun <T: Any> dereferenceClass(): Any =
        <!TYPE_PARAMETER_AS_REIFIED!>T::class<!>
